--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
-        <module>product-status</module>
+        <module>product-result</module>
         <module>process-control</module>
         <module>key-parameter</module>
         <module>order-management</module>
+        <module>manufacturing-status</module>
+        <module>new-module</module>
+        <module>key-parameter</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -46,6 +49,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.1-jre</version>
         </dependency>
     </dependencies>
 
