--- a/product-result/pom.xml
+++ b/product-result/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>product-status</artifactId>
+    <artifactId>product-result</artifactId>
 
 
 </project>
