--- a/manufacturing-status/pom.xml
+++ b/manufacturing-status/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>manufacturing-status</artifactId>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-messaging -thisi is the version that state-machine 2.0.1 REALSE used-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-messaging</artifactId>
+            <version>5.3.4</version>
+        </dependency>
 
+    </dependencies>
 
 </project>
