--- a/public-module/pom.xml
+++ b/public-module/pom.xml
@@ -19,7 +19,12 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
             <version>2.4.3</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.apache.shardingsphere/sharding-jdbc-spring-boot-starter -->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+            <version>4.1.1</version>
+        </dependency>
 
     </dependencies>
 
