a runnable version that can shard product result when storing into database

--- a/public-module/src/main/resources/application-db-config.properties
+++ b/public-module/src/main/resources/application-db-config.properties
@@ -24,13 +24,15 @@ spring.shardingsphere.sharding.default-data-source-name=ds0
 # 通过ENC(密文)开启密码解密，不使用加密算法时，直接输入原始密码 shardingtest
 #sharding.jdbc.datasource.dsProduction0.password=1234fast
 
-spring.shardingsphere.datasource.ds0.type=com.zaxxer.hikari.HikariDataSource
+#spring.shardingsphere.datasource.ds0.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.ds0.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds0.jdbc-url=jdbc:mysql://localhost:3306/mes_server_db_statemachine? serverTimezone=UTC
+#spring.shardingsphere.datasource.ds0.jdbc-url=jdbc:mysql://localhost:3306/mes_server_db_statemachine? serverTimezone=UTC
 spring.shardingsphere.datasource.ds0.username=linemachine
 spring.shardingsphere.datasource.ds0.password=1234fast
 spring.shardingsphere.datasource.ds0.max-active=16
+spring.shardingsphere.datasource.ds0.type=org.apache.commons.dbcp2.BasicDataSource
 #spring.shardingsphere.datasource
+spring.shardingsphere.datasource.ds0.url=jdbc:mysql://localhost:3306/mes_server_db_statemachine? serverTimezone=UTC
 
 #################### 01库配置 ##############################
 #sharding.jdbc.datasource.dsProduction1.driver-class-name=com.mysql.cj.jdbc.Driver
