--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
-        <module>product-result</module>
-        <module>process-control</module>
+<!--        <module>product-result</module>-->
+<!--        <module>process-control</module>-->
         <module>key-parameter</module>
         <module>order-management</module>
-        <module>manufacturing-status</module>
-        <module>key-parameter</module>
-        <module>public-module</module>
+<!--        <module>manufacturing-status</module>-->
+<!--        <module>public-module</module>-->
+        <module>manufacturing-line-simulator</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
