--- a/product-result/pom.xml
+++ b/product-result/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>pom</packaging>
     <artifactId>product-result</artifactId>
     <modules>
         <!---public module is only to use the application.yaml-->
