--- a/public-module/src/main/resources/application.yaml
+++ b/public-module/src/main/resources/application.yaml
@@ -9,6 +9,8 @@ spring:
 #    tomcat:
 #      driver-class-name: com.mysql.cj.jdbc.Driver
   #    type: com.alibaba.druid.pool.DruidDataSource
+  profiles:
+    include: db-config
   jpa:
     hibernate:
       #url: jdbc:mysql://localhost:3306/mes_server_db?serverTimezone=UTC
@@ -21,8 +23,12 @@ spring:
     autoconfigure:
       exclude:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-  profiles:
-    include: db-config
+
+#  config:
+#    activate:
+#      on-profile:
+##        include: application-db-config
+#        include: db-config
 
 
 
@@ -39,13 +45,14 @@ Spring:
   logging:
     level:
       root: info
-    config: classpath:logback-${spring.profiles.active}-spring.xml
+#    config: classpath:logback-${spring.profiles.active}-spring.xml
+    config: classpath:logback-${spring.config.active.on-profile}-spring.xml
 
 ---
 
 spring:
-  profiles: dev
-  port: 8080
+#profiles: dev
+  ##  port: 8080
   logging:
     level:
       root: info
